evaluation-run/605/k8s/validate/resources/mongo-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: microservices-demo
spec:
  serviceName: "mongo"
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      securityContext:
        fsGroup: 999
      containers:
        - name: mongo
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb
              mountPath: /data/db
              subPath: db
            - name: mongodb-config
              mountPath: /data/configdb
              subPath: configdb
          livenessProbe:
            exec:
              command: ["mongosh", "--quiet", "--eval", "db.runCommand({ ping: 1 }).ok"]
            periodSeconds: 5
            failureThreshold: 20
            timeoutSeconds: 5
  volumeClaimTemplates:
    - metadata:
        name: mongodb
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
    - metadata:
        name: mongodb-config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
