evaluation-run/605/k8s/validate/resources/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: microservices-demo
spec:
  type: ClusterIP
  ports:
    - name: "8083"
      port: 8083
      targetPort: 50059
  selector:
    app: api
