evaluation-run/605/k8s/validate/resources/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user
  namespace: microservices-demo
spec:
  type: ClusterIP
  ports:
    - name: "8080"
      port: 8080
      targetPort: 50051
  selector:
    app: user
